[gd_scene load_steps=2 format=3 uid="uid://bm0ttk00f5ojg"]

[ext_resource type="Script" uid="uid://cu8mm6w8bjgkg" path="res://scenes/game_screen/game_screen.gd" id="1_shan1"]

[node name="GameScreen" type="Node2D"]
script = ExtResource("1_shan1")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.7058824)

[node name="HitZone" type="ColorRect" parent="."]
offset_top = 900.0
offset_right = 1920.0
offset_bottom = 920.0
color = Color(1, 0.88183695, 0.8576006, 1)

[node name="LanesContainer" type="Node2D" parent="."]

[node name="Lane0Highlight" type="ColorRect" parent="LanesContainer"]
visible = false
offset_right = 480.0
offset_bottom = 1080.0
color = Color(0.99726194, 0.7774682, 0.899526, 1)

[node name="Lane1Highlight" type="ColorRect" parent="LanesContainer"]
visible = false
offset_left = 480.0
offset_right = 960.0
offset_bottom = 1080.0
color = Color(0.99726194, 0.7774682, 0.899526, 1)

[node name="Lane2Highlight" type="ColorRect" parent="LanesContainer"]
visible = false
offset_left = 960.0
offset_right = 1440.0
offset_bottom = 1080.0
color = Color(0.99726194, 0.7774682, 0.899526, 1)

[node name="Lane3Highlight" type="ColorRect" parent="LanesContainer"]
visible = false
offset_left = 1440.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.99726194, 0.7774682, 0.899526, 1)

[node name="Lane0" type="ColorRect" parent="LanesContainer"]
offset_top = 900.0
offset_right = 480.0
offset_bottom = 920.0

[node name="Lane1" type="ColorRect" parent="LanesContainer"]
offset_left = 480.0
offset_top = 900.0
offset_right = 960.0
offset_bottom = 920.0

[node name="Lane2" type="ColorRect" parent="LanesContainer"]
offset_left = 960.0
offset_top = 900.0
offset_right = 1440.0
offset_bottom = 920.0

[node name="Lane3" type="ColorRect" parent="LanesContainer"]
offset_left = 1440.0
offset_top = 900.0
offset_right = 1920.0
offset_bottom = 920.0

[node name="NotesContainer" type="Node2D" parent="."]

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 20.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_right = 56.0
offset_bottom = 23.0
text = "Счёт: 0"

[node name="ComboLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 53.0
text = "Комбо: 0"

[node name="MaxComboLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_top = 60.0
offset_right = 119.0
offset_bottom = 83.0
text = "Макс. комбо: 0"

[node name="BpmLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_top = 90.0
offset_right = 53.0
offset_bottom = 113.0
text = "BPM: 0"

[node name="SpeedLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_top = 120.0
offset_right = 93.0
offset_bottom = 143.0
text = "Скорость: 0"

[node name="TimeLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_top = 150.0
offset_right = 140.0
offset_bottom = 173.0
text = "Время: 00:00/2:00"

[node name="AccuracyLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_top = 180.0
offset_right = 121.0
offset_bottom = 203.0
text = "Точность 100%"

[node name="InstrumentLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 233.0
text = "Инструмент: стандарт"

[node name="CountdownLabel" type="Label" parent="."]
offset_left = 960.0
offset_top = 340.0
offset_right = 1074.0
offset_bottom = 613.0
theme_override_font_sizes/font_size = 200
text = "5"
